# lidar_objects_tracker

./: CMakeLists.txt  README.md  package.xml
include/lidar_objects_tracker/: jpda_tracker.hpp  lidar_objects_tracker.hpp
lidar_objects_tracker/: CMakeLists.txt  package.xml
lidar_objects_tracker/include/lidar_objects_tracker/: kalman_filter.hpp  lidar_objects_tracker.hpp  lmb_tracker.hpp
lidar_objects_tracker/launch/: objects_tracker_launch.py
lidar_objects_tracker/src/: lidar_objects_tracker.cpp
lidar_objects_tracker/test/: test_kalman_filter.cpp
lidar_objects_tracker_msgs/: CMakeLists.txt  package.xml
lidar_objects_tracker_msgs/msg/: TrackedObject.msg  TrackedObjects.msg
rosbag2_2026_01_15-15_49_22/: metadata.yaml  rosbag2_2026_01_15-15_49_22_0.mcap
rosbag2_filtered/: metadata.yaml
src/: lidar_objects_tracker.cpp
test/: test_kalman_filter.cpp
