<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_objects_tracker</name>
  <version>0.0.0</version>
  <description>Segment and track objects in laserscan</description>
  <maintainer email="maintainer@enjoyrobotics.com">enjoyrobotics</maintainer>
  <license>All rights reserved</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>eigen</depend>
  <depend>sensor_msgs</depend>
  <depend>angles</depend>
  <depend>visualization_msgs</depend>
  <depend>lidar_objects_tracker_msgs</depend>

  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>

  <!-- Unit test dependencies -->
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_common</test_depend>
  <test_depend>ament_cmake_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
